# perfume_web

./: .env.example  .gitignore  .superpowerssddbriefstask-1-diff.txt  AGENTS.md  CLAUDE.md  Makefile  README.en.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 002_share_links.py  003_users.py  004_memory.py  005_feedback.py  006_user_profiles.py  007_feature_tier.py  1cd116d9a446_001_initial_mvp_schema.py
backend/app/: main.py
backend/app/api/v1/: auth.py  config.py  feedback.py  guest.py  health.py  journal.py  memory.py  profile.py  recommend.py  router.py  share.py
backend/app/core/: auth.py  config.py  consolidator.py  deps.py  embedding.py  memory_queue.py  pg.py  quota.py  ratelimit.py  recall.py  redis.py  trace.py
backend/app/graph/: client.py
backend/app/models/: auth.py  feedback.py  guest.py
backend/app/services/: agent_gate.py  boundary.py  deep_trigger.py  emotion.py  environment.py  fallback.py  fragrance.py  generation.py  intent.py  journal.py  llm.py  llm_emotion.py  memory.py  profile.py  refinement.py  safety.py
backend/app/sse/: protocol.py  stream.py
backend/scripts/: consolidate_l3.py  worker_l2.py
backend/tests/: conftest.py  test_agent_gate.py  test_auth.py  test_boundary.py  test_config.py  test_deep_trigger.py  test_diversity.py  test_e2e.py  test_emotion.py  test_environment.py  test_feedback.py  test_graphrag_cache.py  test_guest_session.py  test_health.py  test_intent.py  test_journal.py  test_memory.py  test_performance.py  test_profile.py  test_quota.py  test_services.py  test_session_mode.py  test_share.py  test_skeleton_cache.py
docker/: docker-compose.yml
docker/neo4j/import/: init-fragrances.cypher
docker/postgres/init/: 001-mvp-schema.sql  002-seed-templates.sql
docs/: dataset_fragrantica_2026-06-19_15-34-46-135.json  需求分析文档-按业务模块.md
docs/superpowers/plans/: 2026-06-20-mvp-phase1-implementation.md  2026-06-21-C-体验深化-plan.md  2026-06-21-D-用户系统-plan.md  2026-06-21-E-TiMem记忆系统.md  2026-06-25-前端合规差距修复-plan.md
docs/superpowers/specs/: 2026-06-19-A-产品需求文档.md  2026-06-19-B-技术需求文档.md  2026-06-19-C-线框图.md  2026-06-19-D-质量准则.md  2026-06-19-业务流设计.md  2026-06-21-C-体验深化-design.md  (+7 more)
scripts/: check_data_quality.py  clear_neo4j.py  diagnose_fragrantica_dataset.py  explore_fragrantica_dataset.py  import_fragrantica_to_neo4j.py  import_to_neo4j.py  load_full_fragrances.py  migrate_add_image_to_neo4j.py  migrate_expand_emotion_accords.py
