[tool.poetry]
name = "perfume-backend"
version = "0.1.0"
description = "Perfume AI Agent Backend — FastAPI + Neo4j GraphRAG + SSE"
authors = ["Kirito_moe"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
neo4j = "^5.26.0"
asyncpg = "^0.30.0"
redis = "^5.2.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
