[tool.poetry]
name = "perfume-backend"
version = "0.1.0"
description = "Perfume AI Agent Backend — FastAPI + Neo4j GraphRAG + SSE"
authors = ["Kirito_moe"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
neo4j = "^5.26.0"
asyncpg = "^0.30.0"
redis = "^5.2.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
# Use function-scoped event loops, but reset the shared Neo4j driver between
# SSE tests to prevent cross-loop connection corruption (Windows proactor)

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
