[tool.poetry]
name = "perfume-backend"
version = "0.1.0"
description = "Perfume AI Agent Backend — FastAPI + Neo4j GraphRAG + SSE"
authors = ["Kirito_moe"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
neo4j = "^5.26.0"
asyncpg = "^0.30.0"
redis = "^5.2.0"
pydantic-settings = "^2.6.0"
httpx = "^0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
sqlalchemy = "^2.0.0"
alembic = "^1.18.0"

[tool.pytest.ini_options]
asyncio_default_fixture_loop_scope = "function"
# Use function-scoped event loops, but reset the shared Neo4j driver between
# SSE tests to prevent cross-loop connection corruption (Windows proactor)
markers = [
    "e2e: end-to-end tests (require Docker services, run separately from unit tests)",
    "integration: tests requiring Neo4j connectivity",
    "perf: performance benchmarks (verify TRD latency targets)",
]
addopts = "-m \"not e2e\""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
